# py-simple-inject

./: .gitignore  pyproject.toml
src/simple_inject/: __init__.py  container.py  object_graph.py
